manifests/certs-manager/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: k8s.local
    http:
      paths:
      - path: /weather(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: weather-service
            port:
              number: 80
